docs: Force a table to appear in the correct place in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -802,6 +802,7 @@ any files created by PICARD will be written in that location. Check
 there if new files are expected but do not appear in your working
 directory.\\*\\*}
 \end{htmlonly}
+\newpage
 
 \subsubsection{\xlabel{help}How to get help}
 
