docs: Reword a section title in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2230,7 +2230,7 @@ difference is the improvement in the bowling around strong sources.
 }
 \end{htmlonly}
 
-\subsection{\xlabel{problem}Problem solving configuration files}
+\subsection{\xlabel{problem}Solving configuration-file problems}
 \label{sec:problem}
 
 Two trouble-shooting configuration files are available to supplement your
@@ -3974,7 +3974,7 @@ which oscillate in and out and prevent convergence.\\
 \end{itemize}
 
 These recipes can either be called directly by an external configuration
-file---see \cref{Section}{sec:problem}{Problem solving configuration files}
+file---see \cref{Section}{sec:problem}{Solving configuration-file problems}
 or the parameters can be included (and edited) in your personalised
 configuration file.
 
