--- a/libraries/atl/sun_head.tex
+++ b/libraries/atl/sun_head.tex
@@ -485,7 +485,7 @@
 % ? Document Abstract. (if used)
 %   ==================
 
-ALT provides high level utility functions for handling WCS and other
+ATL provides high level utility functions for handling WCS and other
 AST-related tasks.
 
 % ? End of document
@@ -507,7 +507,7 @@ AST-related tasks.
 
 \section {Introduction}
 
-This library contains routines that use the AST library to perform various
+This library contains routines that use the AST library (SUN/211) to perform various
 higher-level utility tasks.
 
 \appendix
