surf: Update "in press" references

--- a/applications/surf/docs/sc11/sc11.tex
+++ b/applications/surf/docs/sc11/sc11.tex
@@ -251,7 +251,7 @@ Joint Astronomy Centre, Hilo, Hawaii}
 
 % JAC
 
-\newcommand{\Archibald}{\htmladdnormallink{Archibald}{http://www.jach.hawaii.edu/JACdocs/JCMT/SCD/SN/002.2/ } }
+\newcommand{\Archibald}{\htmladdnormallink{Archibald}{http://adsabs.harvard.edu/abs/2002MNRAS.336....1A} }
 \newcommand{\Coulson}{\htmladdnormallink{Coulson}{http://www.jach.hawaii.edu/JACdocs/JCMT/SCD/SN/003/ }}
 
 
@@ -854,7 +854,7 @@ At present there are two measures of the atmosphere's opacity -
 $\tau_{\rm CSO}$, and skydips. A large amount of effort has gone into
 understanding the relationship between these two over the past few
 semesters and the results are presented in Archibald et al.\
-\cite{Archibald00}.  The relationships found for the wideband filters
+\cite{Archibald2002}.  The relationships found for the wideband filters
 now
 used are:
 
@@ -2615,13 +2615,8 @@ Emerson, D.T., Klein, U., \& Haslam, C.G.T., 1979, A\&A, 76, 92
 Currie~M.~J., Privett~G.~J., Chipperfield~A.~J., 1995 {\it CONVERT --
 A format-conversion package}, \xref{Starlink User Note 55}{sun55}{}
 
-\bibitem{Archibald00}
-Archibald, E., Wagg, J., Jenness, T, 2000 {Calculating Sky Opacities:
-a
-re-analysis for SCUBA data},
-{\htmladdnormallink{http://www.jach.hawaii.edu/JACdocs/JCMT/SCD/SN/002.2/}{http://www.jach.hawaii.edu/JACdocs/JCMT/SCD/SN/002.2/
-
-} }
+\bibitem{Archibald2002}
+Archibald, E.\ et al.\ 2002, MNRAS, 336, 1
 
 \bibitem{Coulson}
 Coulson, I., 2001 { Scuba Jiggle Maps},
@@ -2632,7 +2627,7 @@ Hogherheijde, M.R., Sandell, G., 2000, ApJ, 534, 880
 
 \bibitem{Jenness01}
 Jenness, T., Stevens, J.A., Archibald, E.N., Economou, F., Jessop,
-N.E., Robson, E.I., 2001, MNRAS, submitted
+N.E., Robson, E.I., 2002, MNRAS, 336, 14
 
 \bibitem{Pierce00}
 Pierce-Price, D., et al., 2000, ApJ, 545, L121
